# stock

./: .env  main.py  pyproject.toml
app/: config.py  database.py  scheduler.py  schemas.py  smtp.py  stock_data.py
app/routes/: cache_routes.py  nifty_routes.py  portfolio.py  scheduler_routes.py
